@@ -2,6 +2,9 @@
 ##
 twophase<-function(id,strata=NULL, probs=NULL, weights=NULL, fpc=NULL,
                    subset, data, method=c("full","approx","simple")){
+
+  data<-detibble(data)
+    
   method<-match.arg(method)
   if(method=="full") {
     if (!is.null(weights)) stop("weights not accepted by method='full'")
